For adding Credit Suisse NFW-related files

--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk2_prep_clean.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk2_prep_clean.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "121ae55c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d750db1b",
    "metadata": {},
    "outputs": [],
@@ -1171,6 +1180,291 @@
     "        start_c, end_c = \"Afghanistan\", \"Ecuador\"\n",
     "    GWDB2021_org.append(ypk_fn.organize_gwdb_2021_page(page_text_info, start_c, end_c))\n",
     "GWDB2021_org = pd.concat(GWDB2021_org, axis=0).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "80e5c173-f6dd-4693-a88a-74c8ecd502ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GWDB2021_org = pd.read_parquet(sset.DIR_GLOBAL_WEALTH_INT / \"gwdb_2021.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0e6ea0e8-add7-4a7b-81e8-927bdee7fa1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>n_adults</th>\n",
+       "      <th>pct_adults</th>\n",
+       "      <th>total_wealth</th>\n",
+       "      <th>pct_wealth</th>\n",
+       "      <th>wealth_per_adult</th>\n",
+       "      <th>financial_wealth_per_adult</th>\n",
+       "      <th>nonfinancial_wealth_per_adult</th>\n",
+       "      <th>debt_per_adult</th>\n",
+       "      <th>median_wealth_per_adult</th>\n",
+       "      <th>estimation_method</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Afghanistan</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>8591.0</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>544.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>476.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>8967.0</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>530.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>464.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>239.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>9418.0</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>615.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>537.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>288.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003</th>\n",
+       "      <td>9901.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>601.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>461.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>277.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>10372.0</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>686.0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Zimbabwe</th>\n",
+       "      <th>2016</th>\n",
+       "      <td>6583.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>3773.0</td>\n",
+       "      <td>1369.0</td>\n",
+       "      <td>2675.0</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>1228.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>6698.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>4459.0</td>\n",
+       "      <td>1644.0</td>\n",
+       "      <td>3104.0</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>1578.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>6817.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>4952.0</td>\n",
+       "      <td>1807.0</td>\n",
+       "      <td>3459.0</td>\n",
+       "      <td>314.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>reg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>6936.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>6892.0</td>\n",
+       "      <td>2337.0</td>\n",
+       "      <td>5054.0</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>2279.0</td>\n",
+       "      <td>reg_update</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>7086.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>7131.0</td>\n",
+       "      <td>2275.0</td>\n",
+       "      <td>5332.0</td>\n",
+       "      <td>476.0</td>\n",
+       "      <td>2356.0</td>\n",
+       "      <td>reg_update</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3653 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  n_adults  pct_adults  total_wealth  pct_wealth  \\\n",
+       "country     year                                                   \n",
+       "Afghanistan 2000    8591.0        0.23           5.0        0.00   \n",
+       "            2001    8967.0        0.23           5.0        0.00   \n",
+       "            2002    9418.0        0.24           6.0        0.00   \n",
+       "            2003    9901.0        0.25           6.0        0.00   \n",
+       "            2004   10372.0        0.26           7.0        0.00   \n",
+       "...                    ...         ...           ...         ...   \n",
+       "Zimbabwe    2016    6583.0        0.13          25.0        0.01   \n",
+       "            2017    6698.0        0.13          30.0        0.01   \n",
+       "            2018    6817.0        0.13          34.0        0.01   \n",
+       "            2019    6936.0        0.13          48.0        0.01   \n",
+       "            2020    7086.0        0.14          51.0        0.01   \n",
+       "\n",
+       "                  wealth_per_adult  financial_wealth_per_adult  \\\n",
+       "country     year                                                 \n",
+       "Afghanistan 2000             544.0                        82.0   \n",
+       "            2001             530.0                        80.0   \n",
+       "            2002             615.0                        94.0   \n",
+       "            2003             601.0                       160.0   \n",
+       "            2004             686.0                       157.0   \n",
+       "...                            ...                         ...   \n",
+       "Zimbabwe    2016            3773.0                      1369.0   \n",
+       "            2017            4459.0                      1644.0   \n",
+       "            2018            4952.0                      1807.0   \n",
+       "            2019            6892.0                      2337.0   \n",
+       "            2020            7131.0                      2275.0   \n",
+       "\n",
+       "                  nonfinancial_wealth_per_adult  debt_per_adult  \\\n",
+       "country     year                                                  \n",
+       "Afghanistan 2000                          476.0            14.0   \n",
+       "            2001                          464.0            15.0   \n",
+       "            2002                          537.0            16.0   \n",
+       "            2003                          461.0            20.0   \n",
+       "            2004                          550.0            22.0   \n",
+       "...                                         ...             ...   \n",
+       "Zimbabwe    2016                         2675.0           271.0   \n",
+       "            2017                         3104.0           289.0   \n",
+       "            2018                         3459.0           314.0   \n",
+       "            2019                         5054.0           499.0   \n",
+       "            2020                         5332.0           476.0   \n",
+       "\n",
+       "                  median_wealth_per_adult estimation_method  \n",
+       "country     year                                             \n",
+       "Afghanistan 2000                    244.0               reg  \n",
+       "            2001                    239.0               reg  \n",
+       "            2002                    288.0               reg  \n",
+       "            2003                    277.0               reg  \n",
+       "            2004                    318.0               reg  \n",
+       "...                                   ...               ...  \n",
+       "Zimbabwe    2016                   1228.0               reg  \n",
+       "            2017                   1578.0               reg  \n",
+       "            2018                   1627.0               reg  \n",
+       "            2019                   2279.0        reg_update  \n",
+       "            2020                   2356.0        reg_update  \n",
+       "\n",
+       "[3653 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GWDB2021_org"
    ]
   },
   {
