consolidate nearest_region workflow

--- a/notebooks/create-SLIIDERS-ECON/exposure/2-create-segment-regions.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/2-create-segment-regions.ipynb
@@ -13,32 +13,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e97ae6f1-349f-41cd-ba6b-e2f6dd508c84",
-   "metadata": {},
-   "source": [
-    "INPUTS\n",
-    "- `sset.PATH_GADM`\n",
-    "\n",
-    "OUTPUTS\n",
-    "- `sset.PATH_GADM_ADM1`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f26ced68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sliiders import settings as sset\n",
-    "\n",
-    "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", message=\".*initial implementation of Parquet.*\")"
+    "import pandas as pd\n",
+    "from sliiders import settings as sset"
    ]
   },
   {
@@ -56,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adm0 = gpd.read_file(sset.PATH_GADM, layer=\"level0\")\n",
-    "adm1 = gpd.read_file(sset.PATH_GADM, layer=\"level1\")\n",
+    "adm0 = gpd.read_file(sset.PATH_GADM, layer=\"level0\").set_crs(epsg=4326)\n",
+    "adm1 = gpd.read_file(sset.PATH_GADM, layer=\"level1\").set_crs(epsg=4326)\n",
     "\n",
     "# Select columns\n",
     "adm0 = adm0[[\"GID_0\", \"geometry\"]].copy()\n",
@@ -167,20 +150,140 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44634d4f-5efd-4db4-8622-b90ec9b5e81e",
+   "id": "f64893bc-6708-49f7-87b9-632c24263e0f",
    "metadata": {},
    "source": [
-    "### Save to file"
+    "## Generate global Voronoi shapes for `adm1` regions\n",
+    "- Here, `adm1` includes `adm0` for which there are no `adm1` regions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c7759b-bd56-4cce-b8ad-a19e3ed9ce13",
+   "id": "11486ad7-5b1e-4233-b67c-821c7f0810ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "full.to_parquet(sset.PATH_GADM_ADM1, index=False)"
+    "adm1 = spatial.get_voronoi_regions(full)\n",
+    "adm1[\"ISO\"] = adm1[\"UID\"].str.split(\".\").str[0]\n",
+    "countries = adm1.dissolve(\"ISO\", as_index=False).drop(columns=[\"UID\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55464973-fd20-4f16-b5a9-c9696ed0d22a",
+   "metadata": {},
+   "source": [
+    "## Assign ISO to GTSM / CIAM points\n",
+    "- assign based on country Voronoi\n",
+    "- countries are defined by impact regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea3c8ed-e0e0-423b-aa71-d1422895da73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations = spatial.match_stations_to_countries(countries, sset.PATH_SEG_CENTROIDS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecdfc6cd-c110-4185-ae12-a0ab47148fc2",
+   "metadata": {},
+   "source": [
+    "## Generate ISO-level point-voronoi from CIAM points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c6f9dc-ab74-44de-9aed-ce3a3b20dc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vor_gdf = spatial.get_stations_by_iso_voronoi(stations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127c96c1-04f2-43f4-ba40-e8a69e677002",
+   "metadata": {},
+   "source": [
+    "## Get CIAM coastline by country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fab94c7-845a-48b9-b611-3aab5db43505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coastlines = spatial.get_coastlines_by_iso(\n",
+    "    gpd.read_file(sset.PATH_CIAM_COASTLINES), adm1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10664855-e13d-4ad5-a72a-6281a2f338f0",
+   "metadata": {},
+   "source": [
+    "## Get coast-seg-by-CIAM point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4eca187-b799-4fad-adef-751b9f52f8f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coastal_segs = spatial.get_coastal_segments_by_ciam_site(vor_gdf, coastlines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9aa4610-e5bd-4b09-9bf7-ed923b816648",
+   "metadata": {},
+   "source": [
+    "## Overlap coastline vor with adm1 vor to get spatially comprehensive seg_adm1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86bd81be-cec8-4bba-9ae4-565896c6dd5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with warnings.catch_warnings():\n",
+    "    warnings.filterwarnings(\"ignore\", category=ShapelyDeprecationWarning)\n",
+    "    all_overlays, ciam_polys = spatial.generate_voronoi_from_segments(\n",
+    "        coastal_segs,\n",
+    "        adm1,\n",
+    "        \"UID\",\n",
+    "        \"seg_adm\",\n",
+    "        \"adm1\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b77d44-3a31-42a6-a67b-4d869765c73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sset.PATH_CIAM_ADM1_VORONOI_INTERSECTIONS.parent.mkdir(exist_ok=False)\n",
+    "\n",
+    "all_overlays.to_parquet(sset.PATH_CIAM_ADM1_VORONOI_INTERSECTIONS, index=False)\n",
+    "all_overlays.to_file(sset.PATH_CIAM_ADM1_VORONOI_INTERSECTIONS_SHP)\n",
+    "\n",
+    "ciam_polys.to_parquet(sset.PATH_CIAM_POLYS, index=False)"
    ]
   }
  ],
@@ -200,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
