update create-SLIIDERS-ECON based on spatial.py changes

--- a/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
@@ -222,8 +222,8 @@
     "coastlen_ftrs = client.map(\n",
     "    coastlen_poly,\n",
     "    segadm_df.seg_adm.values,\n",
-    "    coastlines_shp_path=PATH_CIAM_COASTLINES,\n",
-    "    seg_adm_voronoi_parquet_path=PATH_CIAM_ADM1_VORONOI_INTERSECTIONS,\n",
+    "    PATH_CIAM_COASTLINES,\n",
+    "    PATH_CIAM_ADM1_VORONOI_INTERSECTIONS,\n",
     "    filesystem=FS,\n",
     ")"
    ]
