--- a/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
@@ -21,8 +21,18 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "\n",
-    "%autoreload 2\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "from pathlib import Path\n",
     "\n",
     "import dask.dataframe as ddf\n",
     "import geopandas as gpd\n",
@@ -32,21 +42,16 @@
     "import numpy_groupies as npg\n",
     "import pandas as pd\n",
     "import regionmask\n",
-    "import rhg_compute_tools.kubernetes as rhgk\n",
-    "import xarray as xr\n",
     "import rioxarray\n",
+    "import xarray as xr\n",
     "import xesmf as xe\n",
     "from cartopy import crs as ccrs\n",
     "from cartopy import feature as cfeature\n",
     "\n",
-    "from sliiders.geography import get_iso_geometry\n",
-    "from sliiders.spatial import grid_ix_to_val, grid_val_to_ix\n",
-    "from sliiders import settings as sset\n",
-    "\n",
-    "import zipfile\n",
+    "import rhg_compute_tools.kubernetes as rhgk\n",
     "from sliiders import __file__\n",
-    "from pathlib import Path\n",
-    "import os"
+    "from sliiders import settings as sset\n",
+    "from sliiders.spatial import get_iso_geometry, grid_ix_to_val, grid_val_to_ix"
    ]
   },
   {
@@ -776,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
