change fpath name

--- a/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
@@ -54,7 +54,7 @@
     "    PATH_CIAM_2016,\n",
     "    PATH_CIAM_ADM1_VORONOI_INTERSECTIONS,\n",
     "    PATH_CIAM_COASTLINES,\n",
-    "    PATH_CIAM_SITES,\n",
+    "    PATH_SEG_CENTROIDS,\n",
     "    PATH_COUNTRY_LEVEL_EXPOSURE,\n",
     "    PATH_COUNTRY_LEVEL_EXPOSURE_PROJ,\n",
     "    PATH_EXPOSURE_AREA_BY_CIAM_AND_ELEVATION,\n",
@@ -350,7 +350,7 @@
    "outputs": [],
    "source": [
     "# GTSM-based CIAM segment points\n",
-    "segpts = gpd.read_file(PATH_CIAM_SITES)[[\"station_id\", \"lat\", \"lon\"]].rename(\n",
+    "segpts = gpd.read_file(PATH_SEG_CENTROIDS)[[\"station_id\", \"lat\", \"lon\"]].rename(\n",
     "    columns={\"station_id\": \"seg\"}\n",
     ")\n",
     "segpts[\"seg\"] = segpts.seg.str.split(\"_\").apply(lambda x: \"seg_\" + x[-1])\n",
@@ -380,7 +380,7 @@
    "outputs": [],
    "source": [
     "# GTSM-based CIAM segment points\n",
-    "segs = gpd.read_file(PATH_CIAM_SITES)[[\"station_id\", \"lat\", \"lon\"]].set_index(\n",
+    "segs = gpd.read_file(PATH_SEG_CENTROIDS)[[\"station_id\", \"lat\", \"lon\"]].set_index(\n",
     "    \"station_id\"\n",
     ")\n",
     "\n",
