--- a/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
@@ -50,7 +50,7 @@
     "import xarray as xr\n",
     "from shapely.geometry import Point\n",
     "\n",
-    "from sliiders.settings import DIR_CIAM_SHAPEFILES, PATH_CIAM_SITES, PATH_GTSM_SURGE"
+    "from sliiders.settings import DIR_CIAM_SHAPEFILES, PATH_SEG_CENTROIDS, PATH_GTSM_SURGE"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "# Export resulting layers\n",
-    "gtsm1.to_file(PATH_CIAM_SITES)  # final set of majority GTSM points for CIAM segs"
+    "gtsm1.to_file(PATH_SEG_CENTROIDS)  # final set of majority GTSM points for CIAM segs"
    ]
   },
   {
