condense litpop loading/processing nb

--- a/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/3-fill_missing_litpop_with_geg.ipynb
@@ -42,7 +42,6 @@
     "import numpy_groupies as npg\n",
     "import pandas as pd\n",
     "import regionmask\n",
-    "import rioxarray\n",
     "import xarray as xr\n",
     "import xesmf as xe\n",
     "from cartopy import crs as ccrs\n",
@@ -105,45 +104,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # convert litpop from csvs to a parquet file\n",
-    "litpop = ddf.read_csv(str(sset.PATH_LITPOP_RAW))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop = litpop.rename(columns={\"latitude\": \"lat\", \"longitude\": \"lon\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop[\"value\"] = litpop[\"value\"].astype(np.float32)\n",
-    "litpop[\"lat\"] = litpop[\"lat\"].astype(np.float32)\n",
-    "litpop[\"lon\"] = litpop[\"lon\"].astype(np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "litpop = litpop.repartition(npartitions=nworkers).persist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "litpop = (\n",
+    "    ddf.read_csv(\n",
+    "        str(sset.PATH_LITPOP_RAW),\n",
+    "        dtype={\"value\": \"float32\", \"lat\": \"float32\", \"lon\": \"float32\"},\n",
+    "    )\n",
+    "    .rename(columns={\"latitude\": \"lat\", \"longitude\": \"lon\"})\n",
+    "    .repartition(npartitions=nworkers)\n",
+    "    .persist()\n",
+    ")\n",
     "litpop_meta = pd.read_csv(sset.DIR_LITPOP_RAW / \"_metadata_countries_v1_2.csv\")"
    ]
   },
