--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -30,27 +30,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
     "import os\n",
-    "import shutil\n",
     "import subprocess\n",
     "import tarfile\n",
-    "import warnings\n",
-    "from itertools import product as lstprod\n",
-    "from pathlib import Path\n",
     "from urllib import request as urequest\n",
     "\n",
+    "from pathlib import Path\n",
     "import dask.distributed as dd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import rhg_compute_tools.kubernetes as rhgk\n",
-    "import statsmodels.api as sm\n",
-    "import xarray as xr\n",
     "from dask_gateway import Gateway\n",
     "from pandas_datareader import wb as dr_wb\n",
-    "from scipy.optimize import minimize as opt_min\n",
     "from tqdm.auto import tqdm\n",
+    "from zipfile import ZipFile\n",
+    "import requests\n",
+    "from io import BytesIO\n",
     "\n",
     "from sliiders import settings as sset\n",
     "\n",
@@ -66,10 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## shorthand for the directory\n",
+    "# creating select directories\n",
+    "pwt_directory = Path(os.path.dirname(sset.PATH_PWT_RAW))\n",
+    "\n",
     "os.makedirs(sset.DIR_YPK_RAW, exist_ok=True)\n",
+    "os.makedirs(pwt_directory, exist_ok=True)\n",
     "os.makedirs(sset.DIR_LITPOP_RAW, exist_ok=True)\n",
-    "os.makedirs(sset.DIR_GEG15_RAW, exist_ok=True)"
+    "os.makedirs(sset.DIR_GEG15_RAW, exist_ok=True)\n",
+    "os.makedirs(sset.DIR_CIA_RAW, exist_ok=True)"
    ]
   },
   {
@@ -89,10 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## PWT10.0\n",
+    "# PWT10.0\n",
     "pwt100_data = pd.read_excel(\"https://www.rug.nl/ggdc/docs/pwt100.xlsx\", sheet_name=2)\n",
     "\n",
-    "## PWT10.0 capital details\n",
+    "# PWT10.0 capital details\n",
     "pwt100_data_K = pd.read_excel(\n",
     "    \"https://www.rug.nl/ggdc/docs/pwt100-capital-detail.xlsx\", sheet_name=2\n",
     ")\n",
@@ -100,7 +98,7 @@
     "pwt_filenames = [\"pwt_100.xlsx\", \"pwt_K_detail_100.xlsx\"]\n",
     "for i, data in enumerate([pwt100_data, pwt100_data_K]):\n",
     "    data.to_excel(\n",
-    "        excel_writer=(sset.DIR_YPK_RAW / pwt_filenames[i]),\n",
+    "        excel_writer=(pwt_directory / pwt_filenames[i]),\n",
     "        sheet_name=\"Sheet1\",\n",
     "        index=False,\n",
     "    )"
@@ -495,6 +493,51 @@
     "file = open(str(sset.DIR_GLOBAL_WEALTH_RAW / GWDB2021_PDFNAME), \"wb\")\n",
     "file.write(gwr_raw.read())\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81f1ddc1-2d7c-41ca-a6e0-86f44ee1dce0",
+   "metadata": {},
+   "source": [
+    "### CIA World Factbook, versions 2000 to 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c90521fe-c411-4b81-ba05-13d43d4f2708",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1455df1bc7240a1a69ee899d2977792",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/21 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cia_download_url = \"https://www.cia.gov/the-world-factbook/about/archives/download\"\n",
+    "cia_files = [f\"factbook-{x}.zip\" for x in range(2000, 2021)]\n",
+    "\n",
+    "for i in tqdm(cia_files):\n",
+    "    skip = False\n",
+    "    for j in [2000, 2001, 2019, 2020]:\n",
+    "        if str(j) in i:\n",
+    "            skip = True\n",
+    "    \n",
+    "    if not skip:\n",
+    "        cia_req = requests.get(\"/\".join([cia_download_url, i]))\n",
+    "        cia_zip = ZipFile(BytesIO(cia_req.content))\n",
+    "        cia_zip.extractall(str(sset.DIR_CIA_RAW))"
    ]
   },
   {
