--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "4fad83be-afe2-4021-8e1e-d701a886d0c9",
    "metadata": {},
    "source": [
     "## Data acquisition notebook for historical, country-level GDP (`Y`), population (`P`), and capital (`K`) information\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "",
+   "id": "1a6153b9-55a2-4329-b823-862faac15cdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,32 +26,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "",
+   "id": "18c7cf6f-615e-40f6-b174-668e252a067d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
     "import os\n",
-    "import shutil\n",
     "import subprocess\n",
     "import tarfile\n",
-    "import warnings\n",
-    "from itertools import product as lstprod\n",
-    "from pathlib import Path\n",
     "from urllib import request as urequest\n",
-    "from zipfile import ZipFile\n",
     "\n",
+    "from pathlib import Path\n",
     "import dask.distributed as dd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import rhg_compute_tools.kubernetes as rhgk\n",
-    "import statsmodels.api as sm\n",
-    "import xarray as xr\n",
     "from dask_gateway import Gateway\n",
     "from pandas_datareader import wb as dr_wb\n",
-    "from scipy.optimize import minimize as opt_min\n",
     "from tqdm.auto import tqdm\n",
+    "from zipfile import ZipFile\n",
+    "import requests\n",
+    "from io import BytesIO\n",
     "\n",
     "from sliiders import settings as sset\n",
     "\n",
@@ -62,20 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "",
+   "execution_count": null,
+   "id": "439e33fa-0330-4a8f-aa54-336c0588c177",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## shorthand for the directory\n",
+    "# creating select directories\n",
+    "pwt_directory = Path(os.path.dirname(sset.PATH_PWT_RAW))\n",
+    "\n",
     "os.makedirs(sset.DIR_YPK_RAW, exist_ok=True)\n",
+    "os.makedirs(pwt_directory, exist_ok=True)\n",
     "os.makedirs(sset.DIR_LITPOP_RAW, exist_ok=True)\n",
-    "os.makedirs(sset.DIR_GEG15_RAW, exist_ok=True)"
+    "os.makedirs(sset.DIR_GEG15_RAW, exist_ok=True)\n",
+    "os.makedirs(sset.DIR_CIA_RAW, exist_ok=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "04a128f2-15b9-4eec-917f-45eb0208b5aa",
    "metadata": {},
    "source": [
     "## Fetching all raw data from various sources\n",
@@ -85,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "",
+   "execution_count": null,
+   "id": "f37f3a44-96e0-4900-b742-2ab8506dc966",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## PWT10.0\n",
+    "# PWT10.0\n",
     "pwt100_data = pd.read_excel(\"https://www.rug.nl/ggdc/docs/pwt100.xlsx\", sheet_name=2)\n",
     "\n",
-    "## PWT10.0 capital details\n",
+    "# PWT10.0 capital details\n",
     "pwt100_data_K = pd.read_excel(\n",
     "    \"https://www.rug.nl/ggdc/docs/pwt100-capital-detail.xlsx\", sheet_name=2\n",
     ")\n",
@@ -101,7 +98,7 @@
     "pwt_filenames = [\"pwt_100.xlsx\", \"pwt_K_detail_100.xlsx\"]\n",
     "for i, data in enumerate([pwt100_data, pwt100_data_K]):\n",
     "    data.to_excel(\n",
-    "        excel_writer=(sset.DIR_YPK_RAW / pwt_filenames[i]),\n",
+    "        excel_writer=(pwt_directory / pwt_filenames[i]),\n",
     "        sheet_name=\"Sheet1\",\n",
     "        index=False,\n",
     "    )"
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "35604635-a0aa-406b-8ce7-24dcbf04c34a",
    "metadata": {},
    "source": [
     "### Maddison Project Dataset"
@@ -117,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "",
+   "execution_count": null,
+   "id": "0625769f-531a-4fe7-92c6-a3b3a8ea8d94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "a9e2c76c-49bb-42b4-a3b6-44eb165218a3",
    "metadata": {},
    "source": [
     "### World Bank WDI: Investment-to-GDP ratio, GDP and GDPpc (nominal and PPP), and Population"
@@ -143,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "",
+   "execution_count": null,
+   "id": "ebfad2b2-5d1f-40cf-b440-2e6958c1057a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "67aa5757-7e54-41e5-952a-6d3d40763331",
    "metadata": {},
    "source": [
     "### WB WDI: exchange rate"
@@ -200,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "",
+   "execution_count": null,
+   "id": "a863cb39-f735-45d7-8f85-16a0679d0240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "a1901639-6247-46d9-85ff-671484f98bee",
    "metadata": {},
    "source": [
     "### UN WPP populations (overall and by-population-group data)"
@@ -234,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "",
+   "execution_count": null,
+   "id": "0109c418-84e6-4e92-ad92-dbb38bdfe08b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "8b103be3-a78e-41cf-a2e8-49b6201571d4",
    "metadata": {},
    "source": [
     "### Åland Island GDP and population\n",
@@ -268,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "",
+   "execution_count": null,
+   "id": "5aaadb1c-d816-416b-b42a-4691b94d19b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "e303f18b-29f0-4bf6-8e5d-c9e438bf0aec",
    "metadata": {},
    "source": [
     "### LitPop (Eberenz et al. 2020, Earth Syst. Sci. Data)\n",
@@ -307,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "",
+   "execution_count": null,
+   "id": "99c3dfcd-cc54-4538-a353-03f353ba2213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "",
+   "execution_count": null,
+   "id": "9086ed16-e64c-4e10-b9ae-cf127354a06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "",
+   "id": "7f14a8a7-4952-4137-ada9-6c2644321097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "",
+   "id": "40a94981-ebf5-4226-bf9d-329a523f47de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,8 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "",
+   "execution_count": null,
+   "id": "c803b04f-5089-4d88-8dec-68b324afddf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "7920619e-2bb6-4bbf-8f9d-04667720cc6f",
    "metadata": {},
    "source": [
     "#### Un-tar and clear storage\n",
@@ -412,8 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "",
+   "execution_count": null,
+   "id": "424e2e88-f25d-4ac9-bc64-57dedb2e5fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "1b090509-3a7f-4d71-bc10-91bfb77aa450",
    "metadata": {},
    "source": [
     "### GEG-15\n",
@@ -438,32 +435,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "",
+   "execution_count": null,
+   "id": "0262ddd9-d299-42eb-b4e1-f3fdfaeec216",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Popen: returncode: None args: ['unzip', '/gcs/rhg-data/impactlab-rhg/coasta...>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp.zip\n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.shx  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.dbf  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.prj  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.shp  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# downloading\n",
     "zip_url = (\n",
@@ -481,8 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "",
+   "execution_count": null,
+   "id": "ecb66c3d-583b-44f6-a27e-48d5ae779078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +467,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "8f1fed1c-5a24-4ee6-bfdd-39ec665a0311",
+   "metadata": {},
+   "source": [
+    "### Global Wealth Databook (from Credit Suisse)\n",
+    "\n",
+    "We download the 2021 vintage (latest as of 2022-03-21)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95c3564-6c45-46d9-9ae4-120e491b9505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## gathering the files; 2020 databook is missing\n",
+    "BASE_URL_GWDB = (\n",
+    "    \"https://www.credit-suisse.com/media/assets/corporate/docs/about-us/research\"\n",
+    "    \"/publications/{}\"\n",
+    ")\n",
+    "\n",
+    "GWDB2021_PDFNAME = \"global-wealth-databook-2021.pdf\"\n",
+    "gwr_raw = urequest.urlopen(BASE_URL_GWDB.format(GWDB2021_PDFNAME))\n",
+    "file = open(str(sset.DIR_GLOBAL_WEALTH_RAW / GWDB2021_PDFNAME), \"wb\")\n",
+    "file.write(gwr_raw.read())\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81f1ddc1-2d7c-41ca-a6e0-86f44ee1dce0",
+   "metadata": {},
+   "source": [
+    "### CIA World Factbook, versions 2000 to 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c90521fe-c411-4b81-ba05-13d43d4f2708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cia_download_url = \"https://www.cia.gov/the-world-factbook/about/archives/download\"\n",
+    "cia_files = [f\"factbook-{x}.zip\" for x in range(2000, 2021)]\n",
+    "\n",
+    "for i in tqdm(cia_files):\n",
+    "    skip = False\n",
+    "    for j in [2000, 2001, 2019, 2020]:\n",
+    "        if str(j) in i:\n",
+    "            skip = True\n",
+    "\n",
+    "    if not skip:\n",
+    "        cia_req = requests.get(\"/\".join([cia_download_url, i]))\n",
+    "        cia_zip = ZipFile(BytesIO(cia_req.content))\n",
+    "        cia_zip.extractall(str(sset.DIR_CIA_RAW))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "654a6cc8-4abb-445d-8462-8360abac7509",
    "metadata": {
     "tags": []
    },
@@ -501,7 +536,7 @@
     "\n",
     "In all cases, we will download these in the directory specified in `sset.DIR_YPK_RAW`.\n",
     "\n",
-    "### CIA World Factbook (compiled by Coleman [2020]; the version that is utilized in this workflow)\n",
+    "### CIA World Factbook (compiled by Coleman [2020])\n",
     "\n",
     "1. Travel to this [link](https://github.com/iancoleman/cia_world_factbook_api) (credit to Coleman [2020]), and scroll down to the `readme.md`.\n",
     "2. In the **Data** section of the `readme.md` file, there should be a link on \"Historical\"; click on this link to travel to a `mega.nz` website having `weekly_json.7z` file.\n",
