updating notebooks for SRTM15+ V2.4

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ce962523-7d5c-4eac-b51b-e2efe41d67c5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "517784ca-badd-41fe-a88c-7b4370260e5c",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,7 @@
     "from tqdm.auto import tqdm\n",
     "from zipfile import ZipFile\n",
     "import requests\n",
+    "import ssl\n",
     "from io import BytesIO\n",
     "\n",
     "from sliiders import settings as sset\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "19fc306c-cfca-44dd-9044-0d8c6bf1d2c3",
    "metadata": {},
    "outputs": [],
@@ -67,6 +68,7 @@
     "IMF_WEO_DIRECTORY = Path(os.path.dirname(sset.PATH_IMF_WEO_RAW))\n",
     "MPD_DIRECTORY = Path(os.path.dirname(sset.PATH_MPD_RAW))\n",
     "GWDB_DIRECTORY = Path(os.path.dirname(sset.PATH_GWDB2021_RAW))\n",
+    "SRTM15PLUS_DIRECTORY = Path(os.path.dirname(sset.PATH_SRTM15_PLUS))\n",
     "\n",
     "directories_to_create = [\n",
     "    sset.DIR_YPK_RAW,\n",
@@ -74,6 +76,7 @@
     "    IMF_WEO_DIRECTORY,\n",
     "    MPD_DIRECTORY,\n",
     "    GWDB_DIRECTORY,\n",
+    "    SRTM15PLUS_DIRECTORY,\n",
     "    sset.DIR_WB_WDI_RAW,\n",
     "    sset.DIR_LITPOP_RAW,\n",
     "    sset.DIR_GEG15_RAW,\n",
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "eb664e52-bdbe-4e2e-b30e-3102fdf8ae83",
    "metadata": {},
    "outputs": [],
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b33996e7-fa36-4496-bda9-1f8a459cde1f",
    "metadata": {},
    "outputs": [],
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e766dc90-ef52-4f10-ba4c-0fdae8c768c9",
    "metadata": {},
    "outputs": [],
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2c01b3a3-63ca-4c8e-9d84-8d0ede6c7c33",
    "metadata": {},
    "outputs": [],
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "792b59d8-44fa-4d85-93db-8682b1857e24",
    "metadata": {},
    "outputs": [],
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "81d2a06a-52eb-4f4f-94fd-8d01e9c32042",
    "metadata": {},
    "outputs": [],
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "3ed65443-7818-406e-a23a-1f62aba91a5d",
    "metadata": {},
    "outputs": [],
@@ -403,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "0ff7328f-8976-4f0c-b981-adff491472c8",
    "metadata": {},
    "outputs": [],
@@ -555,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9cb05b93-c8cc-4f9e-9e99-ce5b7d511d16",
    "metadata": {},
    "outputs": [],
@@ -574,24 +577,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "342a0f73-06b7-4ed9-8ae8-113775265c15",
+   "metadata": {},
+   "source": [
+    "### SRTM 15+\n",
+    "\n",
+    "We download the latest version, which is version 2.4 (as of 2022-03-29)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "7eb84251-5e5a-4180-b59c-793fc06dd913",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/ypk/imf_weo/October_2021/WEO_Data.xlsx')"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sset.PATH_IMF_WEO_RAW"
+    "# Workaround for urllib request error\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.4.nc\"\n",
+    "\n",
+    "urequest.urlretrieve(URL_SRTM15, sset.PATH_SRTM15_PLUS)"
    ]
   },
   {
@@ -706,303 +712,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "000012328c12415d9cb2c147d1e7d7c4": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Minimum",
-       "layout": "IPY_MODEL_aea86385d3cf4e6393a3df8fca451703",
-       "step": 1,
-       "style": "IPY_MODEL_aeede4b994c8493db0a676b65142ac94"
-      }
-     },
-     "184bd24477df45b996715854849415e7": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "1ded78f0c2c9429fa2406e90561c75a9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_ba096dd2f3754a57889b952584c8d6c1",
-       "style": "IPY_MODEL_a83faefcd00140d59bd0af62c67e9425",
-       "value": "<p><b>Dashboard: </b><a href=\"/services/dask-gateway/clusters/compute-rhg.b46c32ae6f8b432491a7cd57d8434091/status\" target=\"_blank\">/services/dask-gateway/clusters/compute-rhg.b46c32ae6f8b432491a7cd57d8434091/status</a></p>\n"
-      }
-     },
-     "2d1dccd8f6b5467abda1417c975fba45": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Scale",
-       "layout": "IPY_MODEL_aea86385d3cf4e6393a3df8fca451703",
-       "style": "IPY_MODEL_4078e9cec59b450696c077b7b01248fa"
-      }
-     },
-     "31b0a1a8ff694960b97f799e661ffad6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_4e324040b9f94c5d9932dece20711c7b",
-       "style": "IPY_MODEL_45765f53ad3148d09a227ef56ff07e04",
-       "value": "\n<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table style=\"text-align: right;\">\n    <tr><th>Workers</th> <td>0</td></tr>\n    <tr><th>Cores</th> <td>0</td></tr>\n    <tr><th>Memory</th> <td>0 B</td></tr>\n</table>\n</div>\n"
-      }
-     },
-     "3a815ee176ea4eff9e30ab62f1127fc0": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "3d139e4a81e5447eaf6017208aedd87e": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "4078e9cec59b450696c077b7b01248fa": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "45765f53ad3148d09a227ef56ff07e04": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "470f84b869f44c0caa2cd1a05e344fcc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "475ca4b682334a87a63ec2c8920d37fd": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Workers",
-       "layout": "IPY_MODEL_aea86385d3cf4e6393a3df8fca451703",
-       "step": 1,
-       "style": "IPY_MODEL_184bd24477df45b996715854849415e7"
-      }
-     },
-     "4bf6016650824ce38b05fd7f332edff4": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "500px"
-      }
-     },
-     "4e324040b9f94c5d9932dece20711c7b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "150px"
-      }
-     },
-     "59974664a01e45408c5d72569000db55": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_ab9212b7e6b24cdaa6153f7d3a63abaa",
-       "style": "IPY_MODEL_3a815ee176ea4eff9e30ab62f1127fc0",
-       "value": "<h2>GatewayCluster</h2>"
-      }
-     },
-     "5ad9a5100b3d4e3e914648087d1ffe6a": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_475ca4b682334a87a63ec2c8920d37fd",
-        "IPY_MODEL_2d1dccd8f6b5467abda1417c975fba45"
-       ],
-       "layout": "IPY_MODEL_be6a19ac86364133b43986590b870416"
-      }
-     },
-     "5fe039985c3645779706ddb479aed917": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "7bbbe0016b8342cabcb0cf5f21cafe70": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "VBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_59974664a01e45408c5d72569000db55",
-        "IPY_MODEL_d32075074e31427282525d83e93ebc9d",
-        "IPY_MODEL_89a92478f0ca4e57a0b629e2b15f4464",
-        "IPY_MODEL_1ded78f0c2c9429fa2406e90561c75a9"
-       ],
-       "layout": "IPY_MODEL_7d3e15e0045648b090cbbca4202f0fc6"
-      }
-     },
-     "7ce0fafc93894417b5e5600831f68109": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Adapt",
-       "layout": "IPY_MODEL_aea86385d3cf4e6393a3df8fca451703",
-       "style": "IPY_MODEL_9f2054d1f7bf4ba3827092e1a20caa03"
-      }
-     },
-     "7d3e15e0045648b090cbbca4202f0fc6": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8638ef466fd74c20841cd0ea74971c2a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "89a92478f0ca4e57a0b629e2b15f4464": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_5fe039985c3645779706ddb479aed917",
-       "style": "IPY_MODEL_470f84b869f44c0caa2cd1a05e344fcc",
-       "value": "<p><b>Name: </b>compute-rhg.b46c32ae6f8b432491a7cd57d8434091</p>"
-      }
-     },
-     "9f2054d1f7bf4ba3827092e1a20caa03": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "a82214e0f48943fdb9c2cec0cd43be78": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "AccordionModel",
-      "state": {
-       "_titles": {
-        "0": "Manual Scaling",
-        "1": "Adaptive Scaling"
-       },
-       "children": [
-        "IPY_MODEL_5ad9a5100b3d4e3e914648087d1ffe6a",
-        "IPY_MODEL_c672b935e71a4c86a961d9ea041bca76"
-       ],
-       "layout": "IPY_MODEL_4bf6016650824ce38b05fd7f332edff4",
-       "selected_index": null
-      }
-     },
-     "a83faefcd00140d59bd0af62c67e9425": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "ab9212b7e6b24cdaa6153f7d3a63abaa": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "aea86385d3cf4e6393a3df8fca451703": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "150px"
-      }
-     },
-     "aeede4b994c8493db0a676b65142ac94": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "ba096dd2f3754a57889b952584c8d6c1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "be6a19ac86364133b43986590b870416": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "c672b935e71a4c86a961d9ea041bca76": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_000012328c12415d9cb2c147d1e7d7c4",
-        "IPY_MODEL_e85cd84ecc18476eb2c884a56fcbb75d",
-        "IPY_MODEL_7ce0fafc93894417b5e5600831f68109"
-       ],
-       "layout": "IPY_MODEL_3d139e4a81e5447eaf6017208aedd87e"
-      }
-     },
-     "d204729602e94fd692caf53248a6e448": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "d32075074e31427282525d83e93ebc9d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_31b0a1a8ff694960b97f799e661ffad6",
-        "IPY_MODEL_a82214e0f48943fdb9c2cec0cd43be78"
-       ],
-       "layout": "IPY_MODEL_8638ef466fd74c20841cd0ea74971c2a"
-      }
-     },
-     "e85cd84ecc18476eb2c884a56fcbb75d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Maximum",
-       "layout": "IPY_MODEL_aea86385d3cf4e6393a3df8fca451703",
-       "step": 1,
-       "style": "IPY_MODEL_d204729602e94fd692caf53248a6e448"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
