--- a/notebooks/create-SLIIDERS-ECON/exposure/data_acquisition/download-srtm-plus.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/data_acquisition/download-srtm-plus.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from sliiders import settings as sset\n",
-    "import urllib\n",
+    "from urllib import request as urequest\n",
     "import ssl\n",
     "\n",
     "# Workaround for urllib request error\n",
@@ -16,7 +16,7 @@
     "\n",
     "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.3.nc\"\n",
     "\n",
-    "urllib.request.urlretrieve(URL_SRTM15, sset.PATH_SRTM15_PLUS)"
+    "urequest.urlretrieve(URL_SRTM15, sset.PATH_SRTM15_PLUS)"
    ]
   }
  ],
@@ -36,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
